Update class metrics
Make sure it captures all the types of fields and methods.